github_data_collector/src/data/issue_comment/mimecorg_vuido.txt

Hello, I was just trying vuido by creating a simple app to control your mouse with midi using [midi](https://www.npmjs.com/package/midi) and [robotjs](https://www.npmjs.com/package/@morajabi/robotjs) packages. I can build the main.js file with npm run build but when i try to run it (after build) with npm start it shows following error:

```
Error: Could not locate the bindings file. Tried:
 → C:\Users\vojtik\projects\midimouse-vuido\build\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\build\Debug\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\build\Release\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\out\Debug\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\Debug\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\out\Release\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\Release\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\build\default\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\compiled\10.16.2\win32\x64\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\addon-build\release\install-root\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\addon-build\debug\install-root\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\addon-build\default\install-root\midi.node
 → C:\Users\vojtik\projects\midimouse-vuido\lib\binding\node-v64-win32-x64\midi.node
    at bindings (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:383:9)
    at Object../node_modules/midi/midi.js (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:568:86)
    at __webpack_require__ (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:20:30)
    at Module../node_modules/babel-loader/lib/index.js!./node_modules/vue-loader/lib/index.js?!./src/MainWindow.vue?vue&type=script&lang=js& (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:159:14)
    at __webpack_require__ (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:20:30)
    at Module../src/MainWindow.vue?vue&type=script&lang=js& (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:9182:193)
    at __webpack_require__ (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:20:30)
    at Module../src/MainWindow.vue (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:9148:98)
    at __webpack_require__ (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:20:30)
    at Module../src/main.js (C:\Users\vojtik\projects\midimouse-vuido\dist\main.js:9216:69)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! midimouse@1.0.0 start:dev: `node ./dist/main.js`
npm ERR! Exit status 1
npm ERR!
npm ERR! Failed at the midimouse@1.0.0 start:dev script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     C:\Users\vojtik\AppData\Roaming\npm-cache\_logs\2019-11-10T14_08_26_356Z-debug.log
```

I tried rebuilding all the libraries (midi and robotjs), removing node_modules folder and npm install again, even npm cache clear --force but to no success. I tried the same code with electron and it worked fine so I am not really sure how to work this out with vuido and I am not really sure if vuido is the source of the problem either. Any help would be appreciated. Thanks.
Hi,

I'm wondering if it is possible to build some kind of menu system in Vuido?

Let's say that you would like a drawer and drop-down menus in the header.

Regards
Håkan
Thanks a lot for this project!

I updated dependencies:
- VueJS to 2.6.10
- Babel to 7 with compatible plugins
- LTS NodeJS 10 is used as target for babel
I've run across a number of issues with the <Area> and <AreaText> components, which may be libUI issues, but very well may be race conditions in vuido.  When <Area> is placed inside <Box>, it renders inside a 1x1 box, making it appear it has not worked at all.

Now to further confuse things... in linux (GTK), adding `scrollable="false" height="1"` appears to make it render at least well enough for my purposes... however, that hacky little fix does not seem to work for windows.

Code wise, i've pretty much copy pasted the examples...   Is there a way we can force a layout update?  I'm not sure thats where the issue is, but thats where my suspicions lie.
Hi, great project

Please, can you help me with some issues- how I can add a system tray support to application?
I can't spread the returning of vuex's mapState/mapMutations/...
This code:
```
<template>
    <Window title="Vuido Example" width="400" height="100" margined v-on:close="$exit">
        <Box padded>
            <Text>
                {{ name }}
            </Text>
        </Box>
    </Window>
</template>

<script>
import { mapState, mapMutations } from 'vuex'

export default {
    data: () => ({

    }),
    computed: {
        ...mapState([
            'name'
        ])
    }
}
</script>
```
Throws following error:
ERROR in ./src/MainWindow.vue?vue&type=script&lang=js& (./node_modules/babel-loader/lib!./node_modules/vue-loader/lib??vue-loader-options!./src/MainWindow.vue?vue&type=script&lang=js&)
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: Unexpected token (19:8)

17 |     },
18 |     computed: {
19 |         ...mapState([
     |         ^
20 |             'name'
21 |         ])
22 |     }
I have a basic application working, essentially a block of text (description) followed by a slider, followed by "ok" / "cancel". Can anyone tell me;

a. How do I centre a text block / how do I insert a centred line of text in a window?
b. How to I right justify the contents of a box, so for example how to I get ok/cancel in the bottom right of my window rather than bottom left?

Positioning control aside, this is looking very interesting / exciting .. !  :)
Is there a way to support drag and drop of files to the application?
https://github.com/andlabs/libui/blob/master/windows/image.cpp